# bnkchip8

./: .gitignore  CMakeLists.txt  README.md
src/: chip8.cpp  chip8.h  main.cpp  renderer.cpp  renderer.h
src/shaders/: fragment.frag  vertex.vert
